List: Fix rating

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -35,6 +35,7 @@ $item-thumbnail-size: 90px
 	+media-xs
 		width: 100%
 		max-height: initial
+		margin: 0
 
 		img
 			width: 100%
@@ -95,6 +96,7 @@ $item-thumbnail-size: 90px
 	display: flex
 	flex-direction: column
 	justify-content: space-around
+	flex: 1
 	padding: 7px
 
 	> ul
