Edit: Set post_type in the view preview as well

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -150,6 +150,9 @@ $item-thumbnail-size: 90px
 				&:hover
 					opacity: 1
 
+			&#item-post_type
+				text-transform: capitalize
+
 .item-body
 	padding: 10px 20px
 	font-size: $font-size
