Edit: Select and update category

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -131,6 +131,9 @@ nav
 							display: flex
 							visibility: visible
 
+.wgt-search input
+	padding-left: 10px
+	padding-right: 10px
 
 .emoji
 	height: 16px
