Edit: Add labels and use fallback favicon

--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -11,6 +11,7 @@ $font-size-extra-large: 22px
 /* Colors */
 $color-background: #EaEbEf
 $color-background-light: lighten($color-background, 5%)
+$color-background-lighter: lighten($color-background, 15%)
 $color-background-dark: darken($color-background, 5%)
 $color-background-darker: darken($color-background, 60%)
 
