--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -4,10 +4,13 @@ ul.list-hits
 
 	> li
 		display: flex
+		flex-direction: row-reverse
 		height: 100%
 		background-color: $color-background-light
 		border-radius: 3px
 		box-shadow: 1px 2px 2px $color-background-dark
+
+		padding-right: 5px
 		+clearfix
 
 		+media-xs
