--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -13,9 +13,12 @@
 	justify-content: center
 	background-color: $color-background-dark
 
-	iframe, img
+	iframe
 		width: 100%
+
+	iframe, img
 		max-width: 100%
+		max-height: 600px
 
 $item-thumbnail-size: 90px
 .item-thumbnail
@@ -66,8 +69,8 @@ $item-thumbnail-size: 90px
 	display: flex
 	flex-direction: column
 	height: 100%
-	width: 50px
-	min-width: 50px
+	width: 45px
+	min-width: 45px
 
 	+media-xs
 		width: 60px
@@ -113,6 +116,9 @@ $item-thumbnail-size: 90px
 	> ul
 		margin: 0
 		padding: 0
+		display: flex
+		align-items: center
+
 		> li
 			margin: 0
 			padding: 0
@@ -120,6 +126,10 @@ $item-thumbnail-size: 90px
 			font-size: $font-size-small
 			padding: 5px 4px
 			color: $color-text-light
+
+			overflow: hidden
+			text-overflow: ellipsis
+			white-space: break-word
 
 			&:before
 				content: '·'
@@ -154,8 +164,15 @@ $item-thumbnail-size: 90px
 			&#item-post_type
 				text-transform: capitalize
 
+			&.item-edit
+				margin-left: auto
+				padding-right: 15px
+				a
+					border: thin solid $color-text-hint
+					padding: 2px 10px
+					border-radius: 3px
+
 .item-body
-	padding: 10px 20px
 	font-size: $font-size
 	line-height: 1.5em
 
@@ -313,3 +330,32 @@ $item-thumbnail-size: 90px
 			.input-content.link, #item-icon
 				visibility: hidden
 				display: none
+
+
+/* Shown when loading a post */
+.item-loading
+	display: flex
+	align-items: center
+	justify-content: flex-start
+	flex-direction: column
+	padding: 15px
+	text-align: center
+
+	&-icon
+		display: flex
+		align-items: center
+		justify-content: center
+		padding: 20px
+		font-size: $font-size-large
+		color: rgba($color-text, .3)
+
+		i
+			font-size: $font-size
+			margin-right: 10px
+
+	.item-title
+		font-size: $font-size-extra-large
+		color: $color-text-hint
+
+		span
+			padding-left: 5px
